# async-customerio

./: .codacy.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  codeql.yml
async_customerio/: __init__.py  _config.py  api.py  client_base.py  constants.py  errors.py  regions.py  request_validator.py  retry.py  track.py  track_v2.py  utils.py
async_customerio/api/: __init__.py  _client.py  customers.py  segments.py  send.py
async_customerio/track/: __init__.py  v1.py  v2.py
tests/: conftest.py  test_api.py  test_api_customers.py  test_api_segments.py  test_client_base.py  test_request_validator.py  test_track.py  test_track_v2.py  test_utils.py
