[tool.poetry]
name = "async-customerio"
version = "2.7.0"
description = "Async CustomerIO Client - a Python client to interact with CustomerIO in an async fashion."
license = "MIT"
authors = [
    "Aleksandr Omyshev <oomyshev@healthjoy.com>"
]
maintainers = [
    "Healthjoy Developers <developers@healthjoy.com>",
    "Aleksandr Omyshev <oomyshev@healthjoy.com>"
]
readme = "README.md"
repository = "https://github.com/healthjoy/async-customerio"
keywords = [
    "async", "asyncio", "customerio", "messaing", "python3", "data-driven-emails", "push notifications",
    "in-app messages", "SMS",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

httpx = { version = ">=0.28.1,<1.0.0", extras = ["http2"] }
h11 = { version = ">=0.16.0" }

[tool.poetry.group.dev.dependencies]
pre-commit = "~4.2"
cryptography = { version = ">=44.0.2,<46.1.0", python = "<3.15" }
Faker = "~15.3"

# tests
pytest = "~8.3"
pytest-asyncio = "~0.26"
pytest-benchmark = "~5.1.0"
pytest-cov = "~6.1.1"
pytest-freezegun = "~0.4.2"
pytest-httpx = "~0.35"
ruff = "~0.9"
mypy = "~1.15.0"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
mccabe.max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["async_customerio", "tests"]
known-third-party = ["faker", "httpx", "pytest", "pytest_httpx"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "preserve"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
